# botowrap

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  api_reference.html  contributing.html  extensions.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md  security.md
.github/workflows/: ci.yml  python-package.yml  release.yml  test-publish.yml
_modules/: index.html
_modules/botowrap/: core.html
_modules/botowrap/extensions/: dynamodb.html
_sources/: extensions.rst.txt  index.rst.txt
botowrap/: __init__.py  core.py
botowrap/extensions/: dynamodb.py
botowrap/types/: core.pyi
botowrap/types/extensions/: dynamodb.pyi
docs/: api_reference.rst  conf.py  contributing.rst  deployment.md  extensions.rst  index.rst  installation.rst  introduction.rst  requirements.txt  usage.rst
examples/: dynamodb_basic.py
scripts/: setup_dev.sh
tests/: conftest.py  test_core.py  test_dynamodb.py
